{
  "version": 4,
  "terraform_version": "0.13.2",
  "serial": 291,
  "lineage": "150810d3-bd5d-086d-3201-411028f9d419",
  "resources": [
    {
      "module": "module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:782402389479:loadbalancer/rke-elb",
            "availability_zones": [
              "us-east-1a"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "rke-elb-440683127.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/healthz",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "rke-elb",
            "idle_timeout": 400,
            "instances": [
              "i-06fe840a5adf387f5",
              "i-07629f89532ae67cb",
              "i-0a08579484208e513"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "http",
                "lb_port": 443,
                "lb_protocol": "http"
              },
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "rke-elb",
            "security_groups": [
              "sg-095c584555967e560"
            ],
            "source_security_group": "782402389479/rke",
            "source_security_group_id": "sg-095c584555967e560",
            "subnets": [
              "subnet-0216ee28d5eec6650"
            ],
            "tags": {
              "Name": "rke-rke-cluster-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782402389479:security-group/sg-095c584555967e560",
            "description": "The security group for rke.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow all outbound communications from the cluster nodes to the internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095c584555967e560",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh into the nodes from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh into the nodes from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh into the nodes from anywhere",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow ssh into the nodes from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "allow internal communication between the instances",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "rke",
            "name_prefix": "",
            "owner_id": "782402389479",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rke"
            },
            "timeouts": null,
            "vpc_id": "vpc-0791de28d215592df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow all outbound communications from the cluster nodes to the internet",
            "from_port": 0,
            "id": "sgrule-167969403",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-095c584555967e560",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_node_to_node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "allow internal communication between the instances",
            "from_port": 0,
            "id": "sgrule-2386679924",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-095c584555967e560",
            "self": true,
            "source_security_group_id": "sg-095c584555967e560",
            "to_port": 0,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow ssh into the nodes from anywhere",
            "from_port": 22,
            "id": "sgrule-3888705390",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095c584555967e560",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow ssh into the nodes from anywhere",
            "from_port": 80,
            "id": "sgrule-1363325659",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095c584555967e560",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow ssh into the nodes from anywhere",
            "from_port": 443,
            "id": "sgrule-3783327172",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095c584555967e560",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound_k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow ssh into the nodes from anywhere",
            "from_port": 6443,
            "id": "sgrule-441393154",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-095c584555967e560",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "dependencies": [
            "module.security_group.aws_security_group.security_group",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782402389479:internet-gateway/igw-0e43011e18b1e1dbc",
            "id": "igw-0e43011e18b1e1dbc",
            "owner_id": "782402389479",
            "tags": {
              "Name": "rke-internet-gateway",
              "VPC": "rke"
            },
            "vpc_id": "vpc-0791de28d215592df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_gateway_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e43011e18b1e1dbc",
            "id": "r-rtb-02b694233f8b19bb91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02b694233f8b19bb9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_subnets_route_table",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnets_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-02b694233f8b19bb9",
            "owner_id": "782402389479",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e43011e18b1e1dbc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rke-public-subnets-route-table",
              "VPC": "rke"
            },
            "vpc_id": "vpc-0791de28d215592df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnets_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d94c55ed530663b8",
            "route_table_id": "rtb-02b694233f8b19bb9",
            "subnet_id": "subnet-0216ee28d5eec6650"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public_subnets_route_table",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782402389479:subnet/subnet-0216ee28d5eec6650",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "11.11.11.0/28",
            "id": "subnet-0216ee28d5eec6650",
            "map_public_ip_on_launch": true,
            "owner_id": "782402389479",
            "vpc_id": "vpc-0791de28d215592df"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:782402389479:vpc/vpc-0791de28d215592df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.11.11.0/28",
            "default_network_acl_id": "acl-018127a78f6e7e0f9",
            "default_route_table_id": "rtb-01d8572bba6488a34",
            "default_security_group_id": "sg-0d3b86ab06f9fee9e",
            "dhcp_options_id": "dopt-7d05fe07",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0791de28d215592df",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d8572bba6488a34",
            "owner_id": "782402389479"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}